--- a/portfolio/html/main.html
+++ b/portfolio/html/main.html
@@ -7,9 +7,9 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width" />
     <title>웹퍼블리셔 김선아 포트폴리오</title>
-    <link rel="apple-touch-icon" href="/resources/img/common/favicon.ico">
-    <link rel="icon" href="/resources/img/common/favicon.ico">
-    <link rel="shortcut icon" href="/resources/img/common/favicon.ico">
+    <link rel="apple-touch-icon" href="../resources/img/common/favicon.ico">
+    <link rel="icon" href="../resources/img/common/favicon.ico">
+    <link rel="shortcut icon" href="../resources/img/common/favicon.ico">
     <link rel="canonical" href="https://ssunakimm.github.io/portfolio/html/main.html" />
     <meta name="keyword" content="퍼블리셔, 웹퍼블리셔" />
     <meta name="description" content="웹퍼블리셔 김선아 포트폴리오 사이트입니다." />
@@ -21,14 +21,14 @@
     <meta property="og:image:width" content="872">
     <meta property="og:image:height" content="872">
     <meta name="twitter:card" content="summary_large_image" />
-    <link rel="stylesheet" href="./resources/css/style.css" />
-    <link rel="stylesheet" href="./resources/css/aos.css" />
-    <link rel="stylesheet" href="./resources/css/slick.css" />
-    <script src="./resources/js/jquery.min.js"></script>
-    <script src="./resources/js/aos.js"></script>
-    <script src="./resources/js/slick.js"></script>
-    <script src="./resources/js/include.js"></script>
-    <script src="./resources/js/common.js"></script>
+    <link rel="stylesheet" href="../resources/css/style.css" />
+    <link rel="stylesheet" href="../resources/css/aos.css" />
+    <link rel="stylesheet" href="../resources/css/slick.css" />
+    <script src="../resources/js/jquery.min.js"></script>
+    <script src="../resources/js/aos.js"></script>
+    <script src="../resources/js/slick.js"></script>
+    <script src="../resources/js/include.js"></script>
+    <script src="../resources/js/common.js"></script>
 </head>
 
 <body>
