--- a/portfolio/html/main.html
+++ b/portfolio/html/main.html
@@ -53,7 +53,7 @@
                 항상 <b>사용자 중심의 웹 경험 구현</b>에 초점을 맞추어, 기술적 완성도와 디자인적 만족도를 동시에 충족하는 결과물을 만들어내는 것을 목표로 하고 있습니다.
             </p>
         </section>
-        <section class="project" data-aos="fade-up" id="project">
+        <section class="project" id="project">
             <h3>Project</h3>
             <div class="list">
                 <div class="year">
