--- a/portfolio/html/main.html
+++ b/portfolio/html/main.html
@@ -20,6 +20,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:image:width" content="872">
     <meta property="og:image:height" content="872">
+    <meta property="og:image" content="../resources/img/common/img_thum.jpg"/>
     <meta name="twitter:card" content="summary_large_image" />
     <link rel="stylesheet" href="../resources/css/style.css" />
     <link rel="stylesheet" href="../resources/css/aos.css" />
